--- a/index.html
+++ b/index.html
@@ -6,25 +6,31 @@
     <title>Live Departures</title>
     <link href="https://fonts.googleapis.com/css2?family=Doto&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background-color: #373737;
-            color: white;
-            text-align: center;
-        }
-        #departures {
-            width: 100%;
-          
-            padding: 15px;
-            border-radius: 10px;
-        }
+       * {
+        box-sizing: border-box; /* Ensure padding and borders don't cause overflow */
+    }
+
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start; /* Align content to the top */
+        min-height: auto; /* Remove unnecessary height */
+        background-color: #373737;
+        color: white;
+        text-align: center;
+        overflow-x: hidden; /* Prevent horizontal scrolling */
+    }
+    #departures {
+        width: 100%;
+        padding: 15px;
+        border-radius: 10px;
+        margin: 0 auto; /* Center horizontally */
+    }
+
+
         .departure {
             display: flex;
             align-items: center;
