--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             border-radius: 5px;
             font-size: 1.8em;
             font-family: 'Doto', sans-serif;
+            border-left: green 5px solid;
         }
         .departure .icon {
             margin-right: 15px;
